--- a/signup.css
+++ b/signup.css
@@ -11,7 +11,9 @@ h1{
    padding: 50px 100px;
     width: 100%;
     margin-top: 0px;
+}
 
-
-
+.profile-section{
+text-align: left;
+    margin-left: 100px;
 }
