--- a/login.css
+++ b/login.css
@@ -37,7 +37,7 @@ button{
     text-align: center;
     background-color: #ffc643;
     color: black;
-    width: 250px;
+    width: 180px;
     padding: 10px;
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -51,12 +51,12 @@ button{
 .signup-text{
   text-align: center;
   margin-right: 350px;
-}
+}git
 
 form{
   text-align: center;
   margin-right: 350px;
-  border-radius: 20px;
+  border-radius: 30px;
 
 }
 
@@ -73,4 +73,14 @@ form{
 }
 .signup-btn:hover {
     background: green;
+}
+
+.input-field {
+    border-radius: 30px;
+    background-color: #e7ed76;
+    border-color: #0a5247;
+    border-width: 0.5px;
+    font-family: Calibri;
+    text-align: center;
+    padding: 10px;
 }
