--- a/post.css
+++ b/post.css
@@ -3,7 +3,7 @@ body {
     color: #0a5247;
 
     form div {
-        margin-bottom: 20px;
+        margin-bottom: 10px;
     }
 
     .photo {
@@ -29,17 +29,19 @@ body {
         border-width: 2px;
         font-family: "Segoe UI";
         text-align: center;
-        padding: 10px;
+        padding: 7px;
         margin-left: 10px;
+
     }
 
     .post-btn {
         text-align: center;
         position: absolute;
-        margin-top: -20px;
-        margin-left: 260px;
+        margin-left: 50%;
+        margin-top: -50px;
+        /*margin-left: 200px;*/
         background-color: #0a5247;
-        color: white;
+        color: antiquewhite;
         font-weight: bold;
         letter-spacing: 0.5px;
         width: 180px;
@@ -53,7 +55,7 @@ body {
         font-size: 70px;
         font-family: "Cooper";
         background-color: #bfd202;
-        padding: 50px 100px;
+        padding: 20px ;
         margin-top: 0px;
     }
 
