--- a/recipe.css
+++ b/recipe.css
@@ -62,18 +62,33 @@ body {
         margin-top: -18px;
 
 }
+
     .icons {
-        background-color: #0a5247;
-        padding: 5px;
-        width: 65px;
-        border-radius: 10px;
-    }
-.like-icon {
-    background-color: #0a5247;
-    border-style: none;
+    display: flex;
+    /*gap: 5px; !* רווח בין האייקונים *!*/
+    background-color: #0a5247; /* צבע רקע ירוק כהה */
+    width: fit-content;
+    border-radius: 8px; /* פינות מעוגלות למכולה */
 }
-    .chat-icon {
-    background-color: #0a5247;
-        border-style: none;
-    }
+
+button {
+    background-color: transparent; /* רקע כפתור שקוף */
+    border: none; /* בלי גבולות */
+    cursor: pointer; /* הופך את הסמן ליד בעת ריחוף */
+    padding: 10px;
+    border-radius: 50%; /* הופך את האייקונים לעגולים */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+button:hover {
+    background-color: #043b33;
+}
+
+button i {
+    font-size: 24px; /* גודל האייקונים */
+    color: #e7ed76; /* ירוק בהיר */
+}
+
 }
