--- a/post.css
+++ b/post.css
@@ -1,16 +1,16 @@
 body {
     background-color: #e7ed76;
     color: #0a5247;
-font-family: 'Palatino Linotype', 'Palatino', serif;
+    font-family: 'Palatino Linotype', 'Palatino', serif;
     margin: 0;
     padding: 0;
     width: 100%;
     /*height: 100%;*/
-        box-sizing: border-box;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     height: 100vh;
-
+}
 
 nav {
     display: flex;
@@ -102,32 +102,40 @@ font-family: 'Cooper Black', 'Georgia', serif;
     }
 
     .photo-upload {
-    /*position: absolute;*/
-    right: 20px;
+        display: flex;
+  align-items: center;
+        justify-content: center;
     top: 200px; /* Adjust to align it better */
     padding: 20px;
     border: 2px solid #0a5247; /* Dark Green frame */
-    border-radius: 8px;
+    border-radius: 20px;
     background-color: #e7ed76; /* Cream background */
     width: 90%; /* Larger width */
     height: 350px; /* Larger height */
-        margin: 0 auto; /* Center the form on the screen */
-
     text-align: center;
+        font-size: 20px;
 }
 
 .photo-upload label {
     font-size: 1.1em;
     color: #0a5247; /* Dark Green text */
-    margin-bottom: 10px;
+    /*margin-bottom: 10px;*/
+ cursor: pointer;
+ /*display: flex;*/
+ /* align-items: center;*/
+
 }
 
-.photo-upload input[type="file"] {
-    font-size: 0.9em;
-    align-self: center;
-    justify-self: center;
-    margin-top: 10px;
-    width: 90%; /* Stretch input to fit */
+.photo-label i {
+font-size: 40px;
+    margin-top: 20px;
+}
+.photo-label i:hover {
+color: #bfd202;
+}
+
+input[type="file"] {
+  display: none; /* Hides the file input */
 }
 
     label {
@@ -158,26 +166,6 @@ font-family: 'Cooper Black', 'Georgia', serif;
 
     }
 
-    .post-btn {
-        display: block;
-        margin: 1px auto;
-        padding: 10px 20px;
-        background-color: #0a5247;
-        color: antiquewhite;
-        border-radius: 10px;
-                font-family: 'Palatino Linotype', 'Palatino', serif;
-    font-size: 16px;
-        font-weight: bold;
-        letter-spacing: 0.5px;
-        width: 180px;
-
-    }
-
-    .post-btn:hover {
-    background-color: #bfd202; /* Medium Green */
-    color: black;
-
-}
 
 
 
@@ -218,4 +206,26 @@ padding: 1px;
     accent-color: #bfd202; /* Medium Green color for the checkbox */
 }
 
+
+
+
+    .post-btn {
+        display: block;
+        margin: 1px auto;
+        padding: 10px 20px;
+        background-color: #0a5247;
+        color: antiquewhite;
+        border-radius: 10px;
+                font-family: 'Palatino Linotype', 'Palatino', serif;
+    font-size: 16px;
+        font-weight: bold;
+        letter-spacing: 0.5px;
+        width: 180px;
     }
+
+    .post-btn:hover {
+    background-color: #bfd202; /* Medium Green */
+    color: black;
+
+}
+
