--- a/signup.css
+++ b/signup.css
@@ -97,6 +97,8 @@ label {
 
 .signup-btn:hover {
     background-color: orange;
+        animation: grow 0.5s ease-in-out; /* Name, duration, and easing */
+
 }
 
 /* Signin Button */
@@ -107,6 +109,8 @@ label {
 
 .signin-btn:hover {
     background-color: green;
+    animation: grow 0.5s ease-in-out; /* Name, duration, and easing */
+
 }
 
 /* Signin Text */
@@ -150,6 +154,23 @@ label {
     /*transition: background-color 0.3s ease;*/
 
 }
+
+@keyframes grow {
+    0% {
+        transform: scale(1); /* Normal size */
+    }
+    50% {
+        transform: scale(1.1); /* Slightly larger */
+    }
+    100% {
+        transform: scale(1); /* Back to normal */
+    }
+}
+
+/* Apply the animation on hover */
+/*.signup-btn:hover {*/
+/*    animation: grow 0.5s ease-in-out; !* Name, duration, and easing *!*/
+/*}*/
 
 .photo-label:hover {
     background-color: #d4d85d;
