--- a/signup.css
+++ b/signup.css
@@ -65,7 +65,7 @@ label {
         font-size: 16px;
         border-radius: 30px;
         background-color: #e7ed76;
-        border: 1px solid #8bc34a;
+        border: 1px solid #0a5247;
         font-family: 'Palatino Linotype', 'Palatino', serif;
         padding: 10px;
         box-sizing: border-box; /* Ensure consistent padding */
@@ -147,7 +147,7 @@ label {
     padding: 10px 20px;
     background-color: #e7ed76;
     border-radius: 30px;
-    border: 1px solid #8bc34a;
+    border: 1px solid #043b33;
     box-sizing: border-box; /* Ensure consistent box sizing */
 
     /*box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);*/
