--- a/login.css
+++ b/login.css
@@ -73,6 +73,8 @@ h3 {
         font-family: 'Palatino Linotype', 'Palatino', serif;
         text-align: center;
         padding: 10px;
+                    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+
     }
 
     .login-btn {
